# hash-ocr

./: .gitignore  MANIFEST.in  README.md  example.py  pyproject.toml  setup.py
hash_ocr/: __init__.py  label.py  models.py  ocr.py
hash_ocr/models/: beaufont.json  letters.json  segoe_ui_9.json  speigel_8.json
tools/: label.py
