[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hash-ocr"
version = "2.2.3"
dependencies = ["opencv-python", "opencv-contrib-python"]
requires-python = ">=3"
authors = [{ name = "Pradish Bijukchhe", email = "pradish@sandbox.com.np" }]
description = "Fast OCR to read computer rendered texts"
readme = "README.md"
license = { file = "LICENSE" }
keywords = []
classifiers = ["Programming Language :: Python :: 3"]

[project.urls]
Homepage = "https://github.com/sandbox-pokhara/hash-ocr"
Issues = "https://github.com/sandbox-pokhara/hash-ocr/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"hash_ocr" = "hash_ocr"

[tool.isort]
line_length = 79
force_single_line = true

[tool.black]
line-length = 79
preview = true

[tool.pyright]
include = ["hash_ocr", "test.py"]
typeCheckingMode = "strict"
